--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         </div>
         <div class="game-board">
             <div class="row">
-                <div class="cell cell-X correct" id="cell-1">X</div>
-                <div class="cell cell-O" id="cell-2">O</div>
+                <div class="cell cell-X" id="cell-1"></div>
+                <div class="cell cell-O" id="cell-2"></div>
                 <div class="cell" id="cell-3"></div>
             </div>
             <div class="row">
-                <div class="cell cell-O" id="4">O</div>
-                <div class="cell cell-X correct" id="cell-5">X</div>
+                <div class="cell cell-O" id="cell-4"></div>
+                <div class="cell cell-X" id="cell-5"></div>
                 <div class="cell" id="cell-6"></div>
             </div>
             <div class="row">
                 <div class="cell" id="cell-7"></div>
                 <div class="cell" id="cell-8"></div>
-                <div class="cell cell-X correct" id="cell-9">X</div>
+                <div class="cell cell-X" id="cell-9"></div>
             </div>
         </div>
         <button id="resetButton">Reset Game</button>
